syntax = "proto3";

message ProtoTaskID {
  uint32 id = 1;
}